# skyrise

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
cmake/: Formatter.cmake  (+4 more)
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt
src/benchmark/lib/: CMakeLists.txt  abstract_benchmark.hpp  abstract_benchmark_config.cpp  abstract_benchmark_config.hpp  abstract_benchmark_result.hpp  abstract_benchmark_runner.hpp  benchmark_output.cpp  benchmark_output.hpp  benchmark_result_aggregate.cpp  benchmark_result_aggregate.hpp
src/benchmark/lib/component_benchmark/: synthetic_table_generator.cpp  synthetic_table_generator.hpp
src/benchmark/lib/micro_benchmark/: micro_benchmark_types.hpp  micro_benchmark_utils.cpp  micro_benchmark_utils.hpp
src/benchmark/lib/system_benchmark/: system_benchmark.cpp  system_benchmark.hpp  system_benchmark_config.cpp  system_benchmark_config.hpp  system_benchmark_result.cpp  system_benchmark_result.hpp  system_benchmark_runner.cpp  system_benchmark_runner.hpp  system_benchmark_utils.cpp  system_benchmark_utils.hpp
src/benchmark/lib/utils/: iperf_wrapper.cpp  iperf_wrapper.hpp  synchronize_instances.cpp  synchronize_instances.hpp
src/lib/: CMakeLists.txt  aggregate_traits.hpp  all_type_variant.cpp  all_type_variant.hpp  configuration.hpp  constant_mappings.cpp  constant_mappings.hpp  constants.hpp  types.cpp  types.hpp
src/lib/client/: base_client.cpp  base_client.hpp  coordinator_client.cpp  coordinator_client.hpp
src/lib/compiler/: abstract_compiler.cpp  abstract_compiler.hpp  abstract_plan_node.hpp  compilation_context.cpp  compilation_context.hpp  enable_make_for_plan_node.hpp  plan_utils.hpp
src/lib/compiler/logical_query_plan/: functional_dependency.cpp  functional_dependency.hpp
src/lib/compiler/physical_query_plan/: pipeline_fragment_template.cpp  pipeline_fragment_template.hpp  pqp_pipeline.cpp  pqp_pipeline.hpp  pqp_serialization.cpp  pqp_serialization.hpp  pqp_utils.cpp  pqp_utils.hpp
src/lib/compiler/pqp_generator/: etl_pqp_generator.cpp  etl_pqp_generator.hpp  tpch_pqp_generator.cpp  tpch_pqp_generator.hpp
src/lib/expression/: abstract_expression.cpp  abstract_expression.hpp  abstract_predicate_expression.cpp  abstract_predicate_expression.hpp  aggregate_expression.cpp  aggregate_expression.hpp  arithmetic_expression.cpp  arithmetic_expression.hpp  between_expression.cpp  between_expression.hpp  binary_predicate_expression.cpp  binary_predicate_expression.hpp  case_expression.cpp  case_expression.hpp  cast_expression.cpp  cast_expression.hpp  expression_functional.cpp  expression_functional.hpp  expression_precedence.hpp  expression_serialization.cpp  expression_serialization.hpp  expression_utils.cpp  expression_utils.hpp  extract_expression.cpp  extract_expression.hpp  in_expression.cpp  in_expression.hpp  is_null_expression.cpp  is_null_expression.hpp  list_expression.cpp  list_expression.hpp  logical_expression.cpp  logical_expression.hpp  pqp_column_expression.cpp  pqp_column_expression.hpp  string_agg_aggregate_expression.cpp  string_agg_aggregate_expression.hpp  unary_minus_expression.cpp  unary_minus_expression.hpp  value_expression.cpp  (+1 more)
src/lib/expression/evaluation/: expression_evaluator.cpp  expression_evaluator.hpp  expression_functors.hpp  expression_result.hpp  expression_result_views.hpp
src/lib/function/: function.cpp  function.hpp  function_config.hpp  function_utils.cpp  function_utils.hpp
src/lib/metadata/schema/: abstract_catalog.hpp  glue_catalog.cpp  glue_catalog.hpp  glue_utils.cpp  glue_utils.hpp  table_partition.cpp  table_partition.hpp  table_schema.cpp  table_schema.hpp
src/lib/metering/request_tracker/: request_monitor.cpp  request_monitor.hpp  request_tracker.cpp  request_tracker.hpp
src/lib/monitoring/: lambda_segments_analyzer.cpp  lambda_segments_analyzer.hpp  metrics_collector.cpp  metrics_collector.hpp  monitoring_handler.cpp  monitoring_handler.hpp  monitoring_types.hpp  tracer.cpp  tracer.hpp
src/lib/operator/: abstract_aggregate_operator.cpp  abstract_aggregate_operator.hpp  abstract_operator.cpp  abstract_operator.hpp  aggregate_hash_operator.cpp  aggregate_hash_operator.hpp  alias_operator.cpp  alias_operator.hpp  execution_context.cpp  execution_context.hpp  export_operator.cpp  export_operator.hpp  filter_operator.cpp  filter_operator.hpp  hash_join_operator.cpp  hash_join_operator.hpp  import_operator.cpp  import_operator.hpp  join_operator_predicate.hpp  partition_operator.cpp  partition_operator.hpp  partitioning_function.cpp  partitioning_function.hpp  projection_operator.cpp  projection_operator.hpp  sort_operator.cpp  sort_operator.hpp  table_wrapper.hpp
src/lib/operator/filter/: abstract_filter_implementation.hpp  expression_evaluator_filter_implementation.cpp  expression_evaluator_filter_implementation.hpp
src/lib/scheduler/: warmup_strategy.cpp  warmup_strategy.hpp
src/lib/scheduler/coordinator/: lambda_executor.cpp  lambda_executor.hpp  pqp_pipeline_scheduler.cpp  pqp_pipeline_scheduler.hpp
src/lib/scheduler/worker/: abstract_task.cpp  abstract_task.hpp  fragment_scheduler.cpp  fragment_scheduler.hpp  generic_task.cpp  generic_task.hpp  operator_task.cpp  operator_task.hpp  task_executor.cpp  task_executor.hpp
src/lib/serialization/: binary_serialization_stream.cpp  binary_serialization_stream.hpp  schema_serialization.cpp  schema_serialization.hpp
src/lib/storage/: storage_types.hpp
src/lib/tool/: function_upload_tool.cpp  function_upload_tool.hpp  tool_config.cpp  tool_config.hpp
src/lib/utils/: array.hpp  assert.hpp  compression.cpp  compression.hpp  filesystem.cpp  filesystem.hpp  git_metadata.cpp.in  git_metadata.hpp  invalid_input_exception.hpp  json.hpp  literal.hpp  map.hpp  print_directed_acyclic_graph.hpp  random.hpp  region.cpp  region.hpp  self_name.cpp  self_name.hpp  signal_handler.cpp  signal_handler.hpp  string.cpp  string.hpp  time.cpp  time.hpp  unit_conversion.hpp  vector.hpp
src/test/: CMakeLists.txt
src/test/utils/: string_test_utils.cpp  string_test_utils.hpp
(+444 files in other folders)
